[package]
name = "aledger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
itertools = "0.12.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.36", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5", features = [
    "fs",
    "trace",
    "compression-br",
    "compression-deflate",
    "compression-gzip",
] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1", features = ["v4", "serde"] }
aws-config = { version = "1.1", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.22"
thiserror = "1"
rand = { version = "0.8.5", features = ["small_rng"] }
base64 = "0.22.0"
ulid = "1.1.2"
dotenv = "0.15.0"
clap = { version = "4.5.4", features = ["derive"] }

[dev-dependencies]
assertables = "7.0.1"
fake = { version = "2.9.2", features = ["uuid", "serde_json", "derive"] }
lazy_static = "1.4.0"
tokio-shared-rt = "0.1.0"
